<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <scala.version>2.10.6</scala.version>
        <scala.binary.version>2.10</scala.binary.version>
        <scala.fallback.version>2.10</scala.fallback.version>
        <hadoop.version>2.6.0</hadoop.version>
        <spark.version>1.6.2</spark.version>
        <spark.binary.version>1.6</spark.binary.version>
        <PermGen>512m</PermGen>
        <MaxPermGen>2g</MaxPermGen>
        <failsafe.version>2.18</failsafe.version>
    </properties>

    <profiles>
        <profile>
            <id>java7</id>
            <properties>
                <java.version>1.7</java.version>
            </properties>
        </profile>
        <profile>
            <id>java8</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>

        <profile>
            <id>scala-2.10</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>scala-2.11</id>
            <properties>
                <scala.version>2.11.8</scala.version>
                <scala.binary.version>2.11</scala.binary.version>
            </properties>
        </profile>

        <!--<profile>-->
        <!--<id>spark-1.3</id>-->
        <!--<properties>-->
        <!--<spark.version>1.3.1</spark.version>-->
        <!--<spark.binary.version>1.3</spark.binary.version>-->
        <!--</properties>-->
        <!--<build>-->
        <!--<plugins>-->
        <!--<plugin>-->
        <!--<groupId>net.alchim31.maven</groupId>-->
        <!--<artifactId>scala-maven-plugin</artifactId>-->
        <!--<configuration>-->
        <!--<excludes>-->
        <!--<exclude>com/tribbloids/spookystuff/pipeline/**</exclude>-->
        <!--</excludes>-->
        <!--</configuration>-->
        <!--</plugin>-->
        <!--</plugins>-->
        <!--</build>-->
        <!--</profile>-->

        <profile>
            <id>spark-1.4</id>
            <properties>
                <spark.version>1.4.1</spark.version>
                <spark.binary.version>1.4</spark.binary.version>
            </properties>
        </profile>

        <profile>
            <id>spark-1.5</id>
            <properties>
                <spark.version>1.5.2</spark.version>
                <spark.binary.version>1.5</spark.binary.version>
            </properties>
        </profile>

        <profile>
            <id>spark-1.6</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>

        <profile>
            <id>spark-2.0</id>
            <properties>
                <spark.version>2.0.0-preview</spark.version>
                <spark.binary.version>2.0</spark.binary.version>
            </properties>
        </profile>

        <profile>
            <id>release-sign-artifacts</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <groupId>com.tribbloids.spookystuff</groupId>
    <artifactId>spookystuff</artifactId>
    <version>0.4.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>spookystuff</name>
    <description>Scalable Query Engine for Data Acquisition based on Apache Spark</description>
    <url>http://tribbloid.github.io/spookystuff/</url>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Peng Cheng</name>
            <email>pc175@uow.edu.au</email>
            <organization>tribbloids.com</organization>
            <organizationUrl>http://tribbloid.github.io</organizationUrl>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git@github.com:tribbloid/spookystuff.git</connection>
        <developerConnection>scm:git:git@github.com:tribbloid/spookystuff.git</developerConnection>
        <url>git@github.com:tribbloid/spookystuff.git</url>
    </scm>

    <modules>
        <module>testutils</module>
        <module>core</module>
        <module>integration</module>
        <!--<module>pipeline</module>-->
        <module>mav</module>
        <!--<module>example</module>-->
        <module>assembly</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_${scala.binary.version}</artifactId>
            <version>2.2.4</version>
            <scope>test</scope>
        </dependency>
        <!--<dependency>-->
        <!--<groupId>org.scalacheck</groupId>-->
        <!--<artifactId>scalacheck_${scala.binary.version}</artifactId>-->
        <!--<version>1.13.2</version>-->
        <!--<scope>test</scope>-->
        <!--</dependency>-->


        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-mllib_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <!--<dependency>-->
        <!--<groupId>org.apache.spark</groupId>-->
        <!--<artifactId>spark-graphx_${scala.binary.version}</artifactId>-->
        <!--<version>${spark.version}</version>-->
        <!--<scope>provided</scope>-->
        <!--</dependency>-->
    </dependencies>

    <build>
        <outputDirectory>target/scala/classes</outputDirectory>
        <testOutputDirectory>target/scala/test-classes</testOutputDirectory>

        <!--add python into fat jar that are shipped to all workers-->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>pyspookystuff</directory>
                <targetPath>com/tribbloids/pyspookystuff</targetPath>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.2.2</version>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile-first</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                    <!--required for publishing to maven central-->
                    <execution>
                        <id>eclipse-add-source</id>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>attach-scaladocs</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>doc-jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <recompileMode>incremental</recompileMode>
                    <useZincServer>true</useZincServer>
                    <args>
                        <arg>-unchecked</arg>
                        <arg>-deprecation</arg>
                    </args>
                    <jvmArgs>
                        <jvmArg>-Xms64m</jvmArg>
                        <jvmArg>-Xms1024m</jvmArg>
                        <jvmArg>-Xmx1024m</jvmArg>
                        <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
                        <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
                    </jvmArgs>
                    <javacArgs>
                        <javacArg>-source</javacArg>
                        <javacArg>${java.version}</javacArg>
                        <javacArg>-target</javacArg>
                        <javacArg>${java.version}</javacArg>
                    </javacArgs>
                    <!--<compilerPlugins>-->
                    <!--<compilerPlugin>-->
                    <!--<groupId>org.scalamacros</groupId>-->
                    <!--<artifactId>paradise_2.10.4</artifactId>-->
                    <!--<version>2.0.1</version>-->
                    <!--</compilerPlugin>-->
                    <!--</compilerPlugins>-->
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
                <version>1.0</version>
                <configuration>
                    <tagsToExclude>com.tribbloids.spookystuff.testutils.Tor</tagsToExclude>
                </configuration>
                <executions>
                    <execution>
                        <id>test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
            </plugin>

            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.6</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <!--<autoReleaseAfterClose>true</autoReleaseAfterClose>-->
                </configuration>
            </plugin>
            <!--<plugin>-->
            <!--<groupId>com.github.klieber</groupId>-->
            <!--<artifactId>phantomjs-maven-plugin</artifactId>-->
            <!--<version>0.4</version>-->
            <!--<executions>-->
            <!--<execution>-->
            <!--<goals>-->
            <!--<goal>install</goal>-->
            <!--</goals>-->
            <!--</execution>-->
            <!--</executions>-->
            <!--<configuration>-->
            <!--<version>1.9.8</version>-->
            <!--</configuration>-->
            <!--</plugin>-->
            <!--<plugin>-->
            <!--<groupId>org.apache.maven.plugins</groupId>-->
            <!--<artifactId>maven-surefire-plugin</artifactId>-->
            <!--<version>2.17</version>-->
            <!--<configuration>-->
            <!--<systemPropertyVariables>-->
            <!--<phantomjs.binary>${phantomjs.binary}</phantomjs.binary>-->
            <!--</systemPropertyVariables>-->
            <!--</configuration>-->
            <!--</plugin>-->
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
